# rejx

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: build-and-push.yml  deploy-production.yml  deploy-staging.yml  test-and-lint.yml
src/rejx/: __init__.py  __main__.py  cli.py  exceptions.py  logger.py  logo.py  utils.py  version.py
tests/: test_rejx.py
tests/data/: .hidden-sample.txt  .hidden-sample.txt.rej
